--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "node-polyfill-webpack-plugin": "^4.1.0"
   }
 }
